--- a/test/legacy/jmeter.yaml
+++ b/test/legacy/jmeter.yaml
@@ -12,7 +12,7 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube.git
       branch: main
-      path: test/jmeter/executor-tests/jmeter-executor-smoke.jmx
+      path: test/jmeter/jmeter-executor-smoke.jmx
   executionRequest:
     jobTemplate: "apiVersion: batch/v1\nkind: Job\nspec:\n  template:\n    spec:\n      containers:\n        - name: \"{{ .Name }}\"\n          image: {{ .Image }}\n          resources:\n            requests:\n              memory: 512Mi\n              cpu: 512m\n"
     activeDeadlineSeconds: 300
@@ -31,7 +31,7 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube.git
       branch: main
-      path: test/jmeter/executor-tests
+      path: test/jmeter
   executionRequest:
     args:
       - "jmeter-executor-smoke.jmx"
@@ -52,7 +52,7 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube.git
       branch: main
-      path: test/jmeter/executor-tests/jmeter-executor-smoke-env-and-property.jmx
+      path: test/jmeter/jmeter-executor-smoke-env-and-property.jmx
   executionRequest:
     variables:
       URL_ENV:
@@ -78,7 +78,7 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube.git
       branch: main
-      path: test/jmeter/executor-tests/jmeter-executor-smoke-negative.jmx
+      path: test/jmeter/jmeter-executor-smoke-negative.jmx
   executionRequest:
     negativeTest: true
     jobTemplate: "apiVersion: batch/v1\nkind: Job\nspec:\n  template:\n    spec:\n      containers:\n        - name: \"{{ .Name }}\"\n          image: {{ .Image }}\n          resources:\n            requests:\n              memory: 512Mi\n              cpu: 512m\n"
@@ -98,7 +98,7 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube.git
       branch: main
-      path: test/jmeter/executor-tests/jmeter-executor-smoke.jmx
+      path: test/jmeter/jmeter-executor-smoke.jmx
   executionRequest:
     jobTemplate: "apiVersion: batch/v1\nkind: Job\nspec:\n  template:\n    spec:\n      containers:\n        - name: \"{{ .Name }}\"\n          image: {{ .Image }}\n          resources:\n            requests:\n              memory: 512Mi\n              cpu: 512m\n"
     activeDeadlineSeconds: 300
@@ -125,7 +125,7 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube.git
       branch: main
-      path: test/jmeter/executor-tests/jmeter-executor-smoke.jmx
+      path: test/jmeter/jmeter-executor-smoke.jmx
   executionRequest:
     variables:
       SLAVES_COUNT:
@@ -157,7 +157,7 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube.git
       branch: main
-      path: test/jmeter/executor-tests/jmeter-executor-smoke.jmx
+      path: test/jmeter/jmeter-executor-smoke.jmx
   executionRequest:
     variables:
       SLAVES_COUNT:
@@ -189,7 +189,7 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube.git
       branch: main
-      path: test/jmeter/executor-tests/jmeter-executor-smoke-env-and-property.jmx
+      path: test/jmeter/jmeter-executor-smoke-env-and-property.jmx
   executionRequest:
     variables:
       URL_ENV:
@@ -215,7 +215,7 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube.git
       branch: main
-      path: test/jmeter/executor-tests/jmeter-executor-smoke-env-and-property.jmx
+      path: test/jmeter/jmeter-executor-smoke-env-and-property.jmx
   executionRequest:
     variables:
       SLAVES_COUNT:
