--- a/test/legacy/kubepug.yaml
+++ b/test/legacy/kubepug.yaml
@@ -12,7 +12,7 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube.git
       branch: main
-      path: test/kubepug/executor-smoke/crd/crd.yaml
+      path: test/legacy/kubepug.yaml
   executionRequest:
     jobTemplate: "apiVersion: batch/v1\nkind: Job\nspec:\n  template:\n    spec:\n      containers:\n        - name: \"{{ .Name }}\"\n          image: {{ .Image }}\n          resources:\n            requests:\n              memory: 64Mi\n              cpu: 128m\n"
     activeDeadlineSeconds: 300
@@ -31,7 +31,7 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube.git
       branch: main
-      path: test/kubepug/executor-smoke/kubepug-smoke-test-negative.yaml
+      path: test/kubepug/kubepug-smoke-test-negative.yaml
   executionRequest:
     negativeTest: true
     jobTemplate: "apiVersion: batch/v1\nkind: Job\nspec:\n  template:\n    spec:\n      containers:\n        - name: \"{{ .Name }}\"\n          image: {{ .Image }}\n          resources:\n            requests:\n              memory: 64Mi\n              cpu: 128m\n"
