--- a/test/legacy/suites/special-cases/k6-parallel-example.yaml
+++ b/test/legacy/suites/special-cases/k6-parallel-example.yaml
@@ -13,8 +13,8 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube
       branch: main
-      path: test/k6/executor-tests/
-      workingDir: test/k6/executor-tests
+      path: test/k6/
+      workingDir: test/k6
   executionRequest:
     # args: ["run", "k6-smoke-test-without-envs.js"] # Optional
     activeDeadlineSeconds: 300
@@ -59,7 +59,7 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube.git
       branch: main
-      path: test/k6/executor-tests/
+      path: test/k6/
   executionRequest:
     activeDeadlineSeconds: 300
 ---
