--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -7915,10 +7915,12 @@ components:
         - end-testworkflow-success
         - end-testworkflow-failed
         - end-testworkflow-aborted
+        - end-testworkflow-canceled
         - become-testworkflow-up
         - become-testworkflow-down
         - become-testworkflow-failed
         - become-testworkflow-aborted
+        - become-testworkflow-canceled
         - created
         - updated
         - deleted
@@ -9184,6 +9186,7 @@ components:
         - passed
         - failed
         - aborted
+        - canceled
 
     TestWorkflowStepStatus:
       type: string
@@ -9196,6 +9199,7 @@ components:
         - timeout
         - skipped
         - aborted
+        - canceled
 
     TestWorkflowTemplate:
       type: object
@@ -10120,7 +10124,7 @@ components:
           items:
             $ref: "#/components/schemas/PodResourceClaim"
         hostPID:
-          $ref: "#/components/schemas/BoxedBoolean"            
+          $ref: "#/components/schemas/BoxedBoolean"
 
     TestWorkflowContainerConfig:
       type: object
@@ -10348,7 +10352,7 @@ components:
         timezone:
           $ref: "#/components/schemas/BoxedString"
           description: cron timezone
-          example: America/New_York         
+          example: America/New_York
 
     TestWorkflowExecutionCR:
       type: object
@@ -10449,7 +10453,7 @@ components:
       type: object
       properties:
         global:
-          $ref: "#/components/schemas/BoxedBoolean"    
+          $ref: "#/components/schemas/BoxedBoolean"
         name:
           type: string
         value:
