--- a/test/examples/cloud-demo/test-workflows/cypress.yaml
+++ b/test/examples/cloud-demo/test-workflows/cypress.yaml
@@ -10,13 +10,13 @@ spec:
       uri: https://github.com/kubeshop/testkube
       revision: main
       paths:
-      - test/cypress/executor-tests/cypress-13
+      - test/cypress/cypress-13
   container:
     resources:
       requests:
         cpu: 2
         memory: 2Gi
-    workingDir: /data/repo/test/cypress/executor-tests/cypress-13
+    workingDir: /data/repo/test/cypress/cypress-13
   steps:
   - name: Run tests
     run:
@@ -33,7 +33,7 @@ spec:
         value: "0"
     steps:
     - name: Saving artifacts
-      workingDir: /data/repo/test/cypress/executor-tests/cypress-13/cypress/videos
+      workingDir: /data/repo/test/cypress/cypress-13/cypress/videos
       artifacts:
         paths:
         - '**/*'
