--- a/test/examples/cloud-demo/test-workflows/k6.yaml
+++ b/test/examples/cloud-demo/test-workflows/k6.yaml
@@ -10,13 +10,13 @@ spec:
       uri: https://github.com/kubeshop/testkube
       revision: main
       paths:
-      - test/k6/executor-tests/k6-smoke-test.js
+      - test/k6/k6-smoke-test.js
   container:
     resources:
       requests:
         cpu: 128m
         memory: 128Mi
-    workingDir: /data/repo/test/k6/executor-tests
+    workingDir: /data/repo/test/k6
   steps:
   - name: Run test
     container:
