--- a/test/examples/k6-perf/k6-crd.yaml
+++ b/test/examples/k6-perf/k6-crd.yaml
@@ -9,13 +9,13 @@ spec:
       uri: https://github.com/kubeshop/testkube
       revision: main
       paths:
-      - test/k6/executor-tests/k6-perf-test.js
+      - test/k6/k6-perf-test.js
   container:
     resources:
       requests:
         cpu: 15
         memory: 25Gi
-    workingDir: /data/repo/test/k6/executor-tests
+    workingDir: /data/repo/test/k6
   config:
     vus: {type: integer, default: 20}
     duration: {type: string, default: '1m'}
@@ -49,13 +49,13 @@ spec:
       uri: https://github.com/kubeshop/testkube
       revision: main
       paths:
-      - test/k6/executor-tests/k6-perf-test-gcp.js
+      - test/k6/k6-perf-test-gcp.js
   container:
     resources:
       requests:
         cpu: 15
         memory: 25Gi
-    workingDir: /data/repo/test/k6/executor-tests
+    workingDir: /data/repo/test/k6
   config:
     vus: {type: integer, default: 20}
     duration: {type: string, default: '1m'}
@@ -92,7 +92,7 @@ spec:
       uri: https://github.com/kubeshop/testkube
       revision: main
       paths:
-      - test/k6/executor-tests/k6-perf-test.js
+      - test/k6/k6-perf-test.js
   steps:
   - name: Run test
     parallel:
@@ -111,7 +111,7 @@ spec:
       paused: true # synchronise running all workers
       run:
         image: grafana/k6:0.49.0
-        workingDir: /data/repo/test/k6/executor-tests
+        workingDir: /data/repo/test/k6
         shell: mkdir /data/artifacts && k6 run k6-perf-test.js --vus {{ config.vus }} --duration {{ config.duration }} --execution-segment '{{ index }}/{{ count }}:{{ index + 1 }}/{{ count }}'
         env:
         - name: K6_WEB_DASHBOARD
@@ -137,7 +137,7 @@ spec:
       uri: https://github.com/kubeshop/testkube
       revision: main
       paths:
-      - test/k6/executor-tests/k6-perf-test-gcp.js
+      - test/k6/k6-perf-test-gcp.js
   steps:
   - name: Run test
     parallel:
@@ -156,7 +156,7 @@ spec:
       paused: true # synchronise running all workers
       run:
         image: grafana/k6:0.49.0
-        workingDir: /data/repo/test/k6/executor-tests
+        workingDir: /data/repo/test/k6
         shell: mkdir /data/artifacts && k6 run k6-perf-test-gcp.js --vus {{ config.vus }} --duration {{ config.duration }} --execution-segment '{{ index }}/{{ count }}:{{ index + 1 }}/{{ count }}'
         env:
         - name: K6_WEB_DASHBOARD
@@ -182,7 +182,7 @@ spec:
       uri: https://github.com/kubeshop/testkube
       revision: main
       paths:
-      - test/k6/executor-tests/k6-perf-test-gcp-discard-response-bodies.js
+      - test/k6/k6-perf-test-gcp-discard-response-bodies.js
   steps:
   - name: Run test
     parallel:
@@ -201,7 +201,7 @@ spec:
       paused: true # synchronise running all workers
       run:
         image: grafana/k6:0.49.0
-        workingDir: /data/repo/test/k6/executor-tests
+        workingDir: /data/repo/test/k6
         shell: mkdir /data/artifacts && k6 run k6-perf-test-gcp-discard-response-bodies.js --vus {{ config.vus }} --duration {{ config.duration }} --execution-segment '{{ index }}/{{ count }}:{{ index + 1 }}/{{ count }}'
         env:
         - name: K6_WEB_DASHBOARD
@@ -227,7 +227,7 @@ spec:
       uri: https://github.com/kubeshop/testkube
       revision: main
       paths:
-      - test/k6/executor-tests/k6-perf-test.js
+      - test/k6/k6-perf-test.js
   steps:
   - name: Run test
     parallel:
@@ -246,7 +246,7 @@ spec:
       paused: true # synchronise running all workers
       run:
         image: grafana/k6:0.49.0
-        workingDir: /data/repo/test/k6/executor-tests
+        workingDir: /data/repo/test/k6
         shell: mkdir /data/artifacts && k6 run k6-perf-test.js -o experimental-prometheus-rw --vus {{ config.vus }} --duration {{ config.duration }} --execution-segment '{{ index }}/{{ count }}:{{ index + 1 }}/{{ count }}' --tag testid=worker-{{ index + 1}}
         env:
         - name: K6_WEB_DASHBOARD
@@ -278,7 +278,7 @@ spec:
       uri: https://github.com/kubeshop/testkube
       revision: main
       paths:
-      - test/k6/executor-tests/k6-perf-test-gcp.js
+      - test/k6/k6-perf-test-gcp.js
   steps:
   - name: Run test
     parallel:
@@ -297,7 +297,7 @@ spec:
       paused: true # synchronise running all workers
       run:
         image: grafana/k6:0.49.0
-        workingDir: /data/repo/test/k6/executor-tests
+        workingDir: /data/repo/test/k6
         shell: mkdir /data/artifacts && k6 run k6-perf-test-gcp.js -o experimental-prometheus-rw --vus {{ config.vus }} --duration {{ config.duration }} --execution-segment '{{ index }}/{{ count }}:{{ index + 1 }}/{{ count }}' --tag testid=worker-{{ index + 1}}
         env:
         - name: K6_WEB_DASHBOARD
