--- a/test/examples/kubecon/test-workflows/postman.yaml
+++ b/test/examples/kubecon/test-workflows/postman.yaml
@@ -10,13 +10,13 @@ spec:
       uri: https://github.com/kubeshop/testkube
       revision: main
       paths:
-      - test/postman/executor-tests/postman-executor-smoke.postman_collection.json
+      - test/postman/postman-executor-smoke.postman_collection.json
   container:
     resources:
       requests:
         cpu: 256m
         memory: 128Mi
-    workingDir: /data/repo/test/postman/executor-tests
+    workingDir: /data/repo/test/postman
   steps:
   - name: Run test
     run:
