--- a/test/legacy/container-executor/jmeter.yaml
+++ b/test/legacy/container-executor/jmeter.yaml
@@ -12,8 +12,8 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube.git
       branch: main
-      path: test/jmeter/executor-tests/jmeter-executor-smoke.jmx
-      workingDir: test/jmeter/executor-tests
+      path: test/jmeter/jmeter-executor-smoke.jmx
+      workingDir: test/jmeter
   executionRequest:
     executePostRunScriptBeforeScraping: true
     postRunScript: "echo 'post-run script' && cd /data/artifacts && ls -lah"
