--- a/test/legacy/container-executor/k6.yaml
+++ b/test/legacy/container-executor/k6.yaml
@@ -12,8 +12,8 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube
       branch: main
-      path: test/k6/executor-tests/k6-smoke-test-without-envs.js
-      workingDir: test/k6/executor-tests
+      path: test/k6/k6-smoke-test-without-envs.js
+      workingDir: test/k6
   executionRequest:
     args: ["run", "k6-smoke-test-without-envs.js"]
     jobTemplate: "apiVersion: batch/v1\nkind: Job\nspec:\n  template:\n    spec:\n      containers:\n        - name: \"{{ .Name }}\"\n          image: {{ .Image }}\n          resources:\n            requests:\n              memory: 64Mi\n              cpu: 128m\n"
@@ -33,8 +33,8 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube
       branch: main
-      path: test/k6/executor-tests/k6-smoke-test-without-envs.js
-      workingDir: test/k6/executor-tests
+      path: test/k6/k6-smoke-test-without-envs.js
+      workingDir: test/k6
   executionRequest:
     args: ["run", "k6-smoke-test-without-envs.js"]
     jobTemplate: "apiVersion: batch/v1\nkind: Job\nspec:\n  template:\n    spec:\n      containers:\n        - name: \"{{ .Name }}\"\n          image: {{ .Image }}\n          resources:\n            requests:\n              memory: 64Mi\n              cpu: 128m\n"
@@ -54,8 +54,8 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube
       branch: main
-      path: test/k6/executor-tests/k6-smoke-test-without-envs.js
-      workingDir: test/k6/executor-tests
+      path: test/k6/k6-smoke-test-without-envs.js
+      workingDir: test/k6
   executionRequest:
     args: ["run", "k6-smoke-test-without-envs.js"]
     jobTemplate: "apiVersion: batch/v1\nkind: Job\nspec:\n  template:\n    spec:\n      containers:\n        - name: \"{{ .Name }}\"\n          image: {{ .Image }}\n          resources:\n            requests:\n              memory: 64Mi\n              cpu: 128m\n"
@@ -89,8 +89,8 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube
       branch: main
-      path: test/k6/executor-tests/
-      workingDir: test/k6/executor-tests
+      path: test/k6/
+      workingDir: test/k6
   executionRequest:
     args: ["run", "$(K6_FILE)"]
     jobTemplate: "apiVersion: batch/v1\nkind: Job\nspec:\n  template:\n    spec:\n      containers:\n        - name: \"{{ .Name }}\"\n          image: {{ .Image }}\n          resources:\n            requests:\n              memory: 64Mi\n              cpu: 128m\n"
