--- a/test/suites/cron/dev/cloud-ui-e2e.yaml
+++ b/test/suites/cron/dev/cloud-ui-e2e.yaml
@@ -12,4 +12,4 @@ spec:
       - name: cloud-ui-e2e
   events:
   - cronjob:
-      cron: "*/05 */4 * * *" # every 4 hours
+      cron: "10 */4 * * *" # every 4 hours
