--- a/test/suites/cron/dev/testkube-multiagent-targets-workflow-cron.yaml
+++ b/test/suites/cron/dev/testkube-multiagent-targets-workflow-cron.yaml
@@ -12,4 +12,4 @@ spec:
       - name: testkube-multiagent-targets-workflow-suite
   events:
   - cronjob:
-      cron: "*/50 */4 * * *" # every 4 hours
+      cron: "40 */4 * * *" # every 4 hours
