fix: missing execution status

--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -6507,6 +6507,7 @@ components:
         - aborted
         - timeout
         - skipped
+        - canceled
 
     ExecutionResult:
       description: execution result returned from executor
