feat: TKC-3683: add support for canceled workflow executions (#6431)
* TKC-3683: add support for canceled workflow executions

Signed-off-by: Dejan Zele Pejchev <pejcev.dejan@gmail.com>

* fix: missing execution status

* fix: missing status variables

* fix: add missing helper

* fix: old architecture detect cancellation

* fix: support legacy executions

---------

Signed-off-by: Dejan Zele Pejchev <pejcev.dejan@gmail.com>
Co-authored-by: Kubeshop <174873053+ed382@users.noreply.github.com>

--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -6507,6 +6507,7 @@ components:
         - aborted
         - timeout
         - skipped
+        - canceled
 
     ExecutionResult:
       description: execution result returned from executor
@@ -7915,10 +7916,12 @@ components:
         - end-testworkflow-success
         - end-testworkflow-failed
         - end-testworkflow-aborted
+        - end-testworkflow-canceled
         - become-testworkflow-up
         - become-testworkflow-down
         - become-testworkflow-failed
         - become-testworkflow-aborted
+        - become-testworkflow-canceled
         - created
         - updated
         - deleted
@@ -9213,6 +9216,7 @@ components:
         - passed
         - failed
         - aborted
+        - canceled
 
     TestWorkflowStepStatus:
       type: string
@@ -9225,6 +9229,7 @@ components:
         - timeout
         - skipped
         - aborted
+        - canceled
 
     TestWorkflowTemplate:
       type: object
