special cases - dev cron trigger

--- a/test/suites/special-cases/special-cases.yaml
+++ b/test/suites/special-cases/special-cases.yaml
@@ -10,3 +10,4 @@ spec:
   - execute:
       workflows:
       - name: special-cases-global-env
+      - name: special-cases-securitycontext-runasuser-runasgroup
